<resources>
    <!-- APP -->
    <string name="app_title">Student’s notebook</string>

    <!-- SUBJECTS -->
    <string name="subjects_title">Subjects</string>
    <string name="subjects_new_subject_hint">Subject\'s name</string>
    <string name="add_subject_button">Add subject</string>
    <string name="delete_subject_button">Delete subject</string>

    <!-- NOTES -->
    <string name="notes_title">Notes</string>
    <string name="add_note_button">Add note</string>
    <string name="notes_new_note_title_hint">Add note title</string>
    <string name="notes_new_note_content_hint">Add note content</string>
    <string name="delete_note_button">Delete note</string>

    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="preferences_category_general">General</string>
    <string name="languages_key">languages_key</string>
    <string name="languages_summary">Choose the language.</string>
    <string name="languages_title">Language</string>
    <string name="languages_en">English</string>
    <string name="languages_sk">Slovak</string>
    <string name="preferences_category_music">Music</string>
    <string name="music_chkbox_key">music_chkbox_key</string>
    <string name="music_chkbox_summary">Toogle the background music.</string>
    <string name="music_chkbox_title">Background music</string>
    <string name="music_key">music_key</string>
    <string name="music_summary">Choose the song.</string>
    <string name="music_title">Song</string>

    <!-- ABOUT -->
    <string name="about_title">About</string>
    <string name="about_text">
        This application provides students an opportunity to write down notes on particular subjects. It enables to organize subjects in folders. You can write down text notes to each subject. There will be possibility to attach files (ie pdf presentations) or photos in the future. This app stores data in local database in this mobile device. There will be an option to access server-side database in the future, so you will be able to share your notes with other students.
    </string>
    <string name="about_author">Author: Marian Babic</string>

    <!-- QUIT -->
    <string name="quit_title">Quit</string>

    <string name="db_error">DB ERROR OCCURED!</string>

</resources>
